# pymeta2

./: README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pre-commit.yml.off  tests.yml.off
src/pymeta/: __init__.py  metadata.py
tests/: test_pymeta.py
