[metadata]
name = pymeta
version = 0.1
description = One line description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pfmoore/pymeta
author = Paul Moore
author-email = p.f.moore@gmail.com
maintainer = Paul Moore
maintainer-email = p.f.moore@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = generic
project_urls =
    Source=https://github.com/pfmoore/pymeta
    Tracker=https://github.com/pfmoore/pymeta/issues

[options]
packages = find:
python_requires = >=3.5
package_dir =
    =src
install_requires =
    packaging
    attrs

[options.extras_require]
test =
    pytest >= 4

[options.packages.find]
where = src

[sdist]
formats = gztar

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
line_length = 88
known_standard_library =
known_first_party = pymeta
known_third_party = pytest

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
junit_family = xunit2
